--- a/themes/next/source/css/_schemes/Mist/_logo.styl
+++ b/themes/next/source/css/_schemes/Mist/_logo.styl
@@ -1,1 +1,11 @@
-.site-subtitle { display: none; }
+.site-meta {
+  position: relative;
+}
+.site-subtitle {
+  position: absolute!important;
+  left: 55px;
+  top: 13px;
+  margin: 0;
+  width: 200px;
+  font-size: 16px;
+}
