--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1807,7 +1807,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffd0ab;
+  background: #94debe;
 }
 .links-of-blogroll {
   font-size: 13px;
